--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
   <title>Guess the word game</title>
 </head>
 <body>
-  
+  <h1></h1>
+  <div class="guess-game">
+    <div class="game-area">
+      <div class="inputs"></div>
+      <div class="control">
+        <button class="check">Check Word</button>
+        <button class="hint"><span></span> Hint</button>
+      </div>
+      <div class="message"></div>
+    </div>
+    <div class="key-colors">
+      <h2>Key Colors</h2>
+      <div class="key-color">
+        <div class="key in-place"></div>
+        <div class="key-text">Letter is Correct and in place</div>
+      </div>
+      <div class="key-color">
+        <div class="key not-in-place"></div>
+        <div class="key-text">Letter is Correct But Not In Place</div>
+      </div>
+      <div class="key-color">
+        <div class="key no"></div>
+        <div class="key-text">Letter is wrong</div>
+      </div>
+    </div>
+  </div>
+  <footer></footer>
 </body>
 </html>
