--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="dist/style.css">
   <script src="dist/index.js" defer></script>
   <title>Guess the word game</title>
 </head>
@@ -37,3 +38,7 @@
   <footer></footer>
 </body>
 </html>
+
+<!-- to change output sass directory  -->
+<!--  sass --watch ./src/sass:dist/   -->
+                  <!-- input : output -->
