--- a/index.html
+++ b/index.html
@@ -41,4 +41,4 @@
 
 <!-- to change output sass directory  -->
 <!--  sass --watch ./src/sass:dist/   -->
-                  <!-- input : output -->
+<!-------------------- input : output -->
