--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="dist/style.css">
+  <link rel="stylesheet" href="style/index.css">
   <script src="dist/index.js" defer></script>
   <title>Guess the word game</title>
 </head>
 
 <body>
   <h1></h1>
-
   <div class="guess-game">
     <div class="game-area">
       <div class="inputs"></div>
