--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="load"></div>
+  <!-- <div class="load"></div> -->
   <h1></h1>
   <div class="guess-game">
     <div class="game-area">
