--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h2>Key Colors</h2>
       <div class="key-color">
         <div class="key in-place"></div>
-        <div class="key-text">&sup</div> <!--Letter is Correct and in place-->
+        <div class="key-text">Letter is Correct and in place</div> <!--Letter is Correct and in place-->
       </div>
       <div class="key-color">
         <div class="key not-in-place"></div>
